# GraspC2

./: .gitignore  .gitignore~  CMakeLists.txt  README.md
app/: ArmMoveTo.cpp  ArmMoveTo.h  CAssemblyC2Start.cpp  CMakeLists.txt
cmake/: qt.conf  qt.conf.in
grasp/: CMakeLists.txt  Camera.cpp  Graphic.cpp  GraspC2.cpp
grasp/data/: armTaskPoint_config.json  deviceObject_config.json  grasp_config.json  voc.names  yolov3-voc.cfg
grasp/include/: Darknet.h  GraphicsGrasp.h  GraspController.h  YoloDetector.h  YoloLibtorchDetector.h
grasp/src/: Darknet.cpp  GraphicsGrasp.cpp  GraspController.cpp  YoloDetector.cpp  YoloLibtorchDetector.cpp
